fixed layout issue --ems

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -1,21 +1,18 @@
 * { margin: 0; padding: 0; }
 
 html {
-	/*width: 50%;*/
-	margin-left: 25%;
-	margin-right: 25%;
-	
-	
+	text-align: center;
 }
 
 /* GENERAL */
 
 body {
+	width: 650px;
 	text-align: center;
     background: #444;
     color: #333;
     font: 11px verdana, arial, helvetica, sans-serif;
-	margin:0;
+	margin:0 auto;
     padding:header-<length> 0 footer-<length> 0;
 	
 }
@@ -73,8 +70,6 @@ input:focus, select:focus, textarea:focus {
     border: 1px solid #5686BA;
 }
 
-
-
 .main {
 	text-align: center;
     background: #eee;
@@ -90,7 +85,6 @@ input:focus, select:focus, textarea:focus {
     padding: 10px;
     border: 1px solid #5686BA;
 }	
-
 
 .tagOutput{
 	padding: 10px 0px 10px 0px;	
